force-app/main/default/objects/TaxaMoeda__c/TaxaMoeda__c.object-meta.xml
<CustomObject>
    <label>Taxa da Moeda</label>
    <nameField>
        <displayFormat>TM-{000000}</displayFormat>
        <label>Número da taxa da moeda</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxas da Moeda</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>