force-app/main/default/objects/TaxaMoeda__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Data a partir de onde se aplica a taxa de conversão da moeda de origem para moeda de destino</description>
    <inlineHelpText>Data a partir de onde se aplica a taxa de conversão da moeda de origem para moeda de destino</inlineHelpText>
    <label>Data Início</label>
    <required>true</required>
    <type>Date</type>
</CustomField>