force-app/main/default/objects/TaxaMoeda__c/fields/IdentificadorTaxa__c.field-meta.xml
<CustomField>
    <fullName>IdentificadorTaxa__c</fullName>
    <description>Identificador da taxa de conversão</description>
    <formula>MoedaOrigem__c  &amp;  MoedaDestino__c  &amp;  TEXT(Data__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identificador da taxa de conversão</inlineHelpText>
    <label>Identificador da taxa</label>
    <type>Text</type>
</CustomField>