force-app/main/default/objects/TaxaMoeda__c/fields/IdentificadorTaxaInvertido__c.field-meta.xml
<CustomField>
    <fullName>IdentificadorTaxaInvertido__c</fullName>
    <description>Identificador da taxa de conversão invertendo as moedas</description>
    <formula>MoedaDestino__c &amp; MoedaOrigem__c &amp; TEXT(Data__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identificador da taxa de conversão invertendo as moedas</inlineHelpText>
    <label>Identificador da taxa invertido</label>
    <type>Text</type>
</CustomField>