force-app/main/default/objects/TaxaMoeda__c/fields/MoedaDestino__c.field-meta.xml
<CustomField>
    <fullName>MoedaDestino__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Moeda destino</label>
    <referenceTo>Moeda__c</referenceTo>
    <relationshipLabel>Taxas da Moeda (Destino)</relationshipLabel>
    <relationshipName>TaxasMoedaDestino</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>