force-app/main/default/objects/TaxaMoeda__c/fields/MoedaOrigem__c.field-meta.xml
<CustomField>
    <fullName>MoedaOrigem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Moeda origem</label>
    <referenceTo>Moeda__c</referenceTo>
    <relationshipLabel>Taxas da Moeda (Origem)</relationshipLabel>
    <relationshipName>TaxasMoedaOrigem</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>