force-app/main/default/objects/TaxaMoeda__c/fields/TaxaConversao__c.field-meta.xml
<CustomField>
    <fullName>TaxaConversao__c</fullName>
    <description>Taxa de conversão da moeda de origem para moeda de destino</description>
    <inlineHelpText>Taxa de conversão da moeda de origem para moeda de destino</inlineHelpText>
    <label>Taxa de conversão</label>
    <precision>8</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>